--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
     <link rel="icon" href="img/favicon.ico">
 	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 
-    <title>Cover Template for Bootstrap</title>
+    <title>Renderbit Technologies | Web Presence Provider, Responsive Web Development, Mobile Apps Development</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
+    <!-- Animate.css -->
+    <link href="css/animate.min.css" rel="stylesheet">
+    <!-- Typed.js -->
+    <link href="css/typed.css" rel="stylesheet">
+	<!-- Floating labels -->
+    <link href="css/float-labels.css" rel="stylesheet">
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
     <!-- Custom styles for this template -->
     <link href="css/cover.css" rel="stylesheet">
 
@@ -31,32 +35,129 @@
   <body>
 
     <div class="site-wrapper">
-      <div class="site-wrapper-inner">
+      <div class="site-wrapper-inner" id="home-wrapper">
         <div class="cover-container">
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">Cover</h3>
+              <h4 class="masthead-brand">Renderbit Technologies</h4>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Features</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li class="active"><a href="#home-wrapper">Home</a></li>
+                  <li><a href="#about-wrapper">About</a></li>
+                  <li><a href="#contact-wrapper">Contact</a></li>
                 </ul>
               </nav>
             </div><!-- /.inner -->
           </div><!-- /.masthead -->
 
           <div class="inner cover">
-            <h1 class="cover-heading">Cover your page.</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+            <h2 class="cover-heading">
+			  We <span class="typed"></span>
+			</h2>
+          </div><!-- /.cover -->
+
+          <div class="mastfoot">
+            <div class="inner">
+              <p>
+			    <a data-toggle="tooltip" data-placement="bottom" title="Scroll to continue" class="nav-icon-scroll" href="#about-wrapper">
+				  <i class="glyphicon glyphicon-chevron-down"></i>
+				</a>
+		      </p>
+            </div><!--/.inner -->
+          </div><!-- /.mastfoot -->
+        </div><!-- /.cover-container -->
+      </div><!-- /.site-wrapper-inner -->
+      <div class="site-wrapper-inner" id="about-wrapper">
+        <div class="cover-container">
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h4 class="masthead-brand">Renderbit Technologies</h4>
+              <nav>
+                <ul class="nav masthead-nav">
+                  <li><a href="#home-wrapper">Home</a></li>
+                  <li class="active"><a href="#about-wrapper">About</a></li>
+                  <li><a href="#contact-wrapper">Contact</a></li>
+                </ul>
+              </nav>
+            </div><!-- /.inner -->
+          </div><!-- /.masthead -->
+
+          <div class="inner cover">
+            <h2 class="cover-heading">Want a web presence? Look no further.</h2>
+            <p class="lead">We take pride in being a complete end-to-end web presence provider - from web sites and mobile apps to branding, content and search engine optimization - forming an inclusive web strategy that brings your product or service to the online spotlight. And, from time to time, we also build some cool projects of our own.</p>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
+              <a href="#" class="btn btn-lg btn-default">View our projects</a>
             </p>
           </div><!-- /.cover -->
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+              <p>
+			    <a data-toggle="tooltip" data-placement="bottom" title="Scroll to continue" class="nav-icon-scroll" href="#contact-wrapper">
+				  <i class="glyphicon glyphicon-chevron-down"></i>
+				</a>
+		      </p>
+            </div><!--/.inner -->
+          </div><!-- /.mastfoot -->
+        </div><!-- /.cover-container -->
+      </div><!-- /.site-wrapper-inner -->
+      <div class="site-wrapper-inner" id="contact-wrapper">
+        <div class="cover-container">
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h4 class="masthead-brand">Renderbit Technologies</h4>
+              <nav>
+                <ul class="nav masthead-nav">
+                  <li><a href="#home-wrapper">Home</a></li>
+                  <li><a href="#about-wrapper">About</a></li>
+                  <li class="active"><a href="#contact-wrapper">Contact</a></li>
+                </ul>
+              </nav>
+            </div><!-- /.inner -->
+          </div><!-- /.masthead -->
+
+          <div class="inner cover">
+			<h2 class="cover-heading">Get in touch.</h2>
+			<div class="row">
+			  <div class="col-sm-6">
+			    <p class="lead">We are a team that converts ideas, inspiration (and coffee!) into amazing work. Feel free to drop by anytime to have a chat with us.</p>
+				<div id="map" class="embed-responsive embed-responsive-16by9">
+				  <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5214.645540682641!2d88.3894797817787!3d22.454933204368402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7323708266f8649e!2s4+Sight+Manor!5e0!3m2!1sen!2sin!4v1478723847451"></iframe>
+				</div>
+			  </div><!-- /.col-sm-6 -->
+			  <div class="col-sm-6">
+			    <p class="lead">Drop us a line for any queries or feedback. We'd love to hear from you!</p>
+				<form>
+				  <div class="form-group float-label-control">
+					<label for="name">Your name</label>
+					<input type="text" class="form-control" id="name" name="name" placeholder="Your name">
+				  </div>
+				  <div class="form-group float-label-control">
+					<label for="email">Your email address</label>
+					<input type="email" class="form-control" id="email" name="email" placeholder="Your email address">
+				  </div>
+				  <div class="form-group float-label-control">
+					<label for="message">Your message</label>
+					<textarea class="form-control" id="message" name="message" placeholder="Your message" rows="2"></textarea>
+				  </div>
+				  <button type="submit" class="btn btn-default btn-block">Submit</button>
+				</form>
+			  </div><!-- /.col-sm-6 -->
+			</div><!-- /.row -->
+            <!--<h1 class="cover-heading">Cover your page.</h1>
+            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+            <p class="lead">
+              <a href="#" class="btn btn-lg btn-default">Learn more</a>
+            </p>-->
+          </div><!-- /.cover -->
+
+          <div class="mastfoot">
+            <div class="inner">
+              <p>
+			    <a data-toggle="tooltip" data-placement="bottom" title="Back to top" class="nav-icon-scroll" href="#home-wrapper">
+				  <i class="glyphicon glyphicon-chevron-up"></i>
+				</a>
+		      </p>
             </div><!--/.inner -->
           </div><!-- /.mastfoot -->
         </div><!-- /.cover-container -->
@@ -68,6 +169,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/typed.min.js"></script>
+    <script src="js/float-labels.js"></script>
+	<script src="js/app.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
   </body>
