--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Renderbit Technologies">
     <link rel="icon" href="img/favicon.ico">
 	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 
@@ -22,8 +22,8 @@
     <link href="css/float-labels.css" rel="stylesheet">
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="css/cover.css" rel="stylesheet">
+    <!-- Site stylesheet -->
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -140,15 +140,10 @@
 					<label for="message">Your message</label>
 					<textarea class="form-control" id="message" name="message" placeholder="Your message" rows="2"></textarea>
 				  </div>
-				  <button type="submit" class="btn btn-default btn-block">Submit</button>
+				  <button type="submit" class="btn btn-default btn-lg">Submit</button>
 				</form>
 			  </div><!-- /.col-sm-6 -->
 			</div><!-- /.row -->
-            <!--<h1 class="cover-heading">Cover your page.</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-            <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
-            </p>-->
           </div><!-- /.cover -->
 
           <div class="mastfoot">
@@ -164,13 +159,17 @@
       </div><!-- /.site-wrapper-inner -->
     </div><!-- /.site-wrapper -->
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- jQuery -->
     <script src="js/jquery.min.js"></script>
+	<!-- Bootstrap core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/typed.min.js"></script>
+    <!-- Typed.js -->
+	<script src="js/typed.min.js"></script>
+	<!-- Autogrow textareas -->
+    <script src="js/autogrow.min.js"></script>
+	<!-- Bootstrap form floating labels -->
     <script src="js/float-labels.js"></script>
+	<!-- Site-wide JavaScript -->
 	<script src="js/app.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
