Add Renderbit branding

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="Renderbit Technologies">
-    <link rel="icon" href="img/favicon.ico">
+    <link rel="icon" href="img/favicon.png">
 	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 
     <title>Renderbit Technologies | Web Presence Provider, Responsive Web Development, Mobile Apps Development</title>
@@ -39,7 +39,9 @@
         <div class="cover-container">
           <div class="masthead clearfix">
             <div class="inner">
-              <h4 class="masthead-brand">Renderbit Technologies</h4>
+              <h4 class="masthead-brand">
+			    <img src="img/renderbit-logo-white.png" class="img-responsive" alt="Renderbit Technologies">
+              </h4>
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#home-wrapper">Home</a></li>
@@ -71,7 +73,9 @@
         <div class="cover-container">
           <div class="masthead clearfix">
             <div class="inner">
-              <h4 class="masthead-brand">Renderbit Technologies</h4>
+              <h4 class="masthead-brand">
+			    <img src="img/renderbit-logo-black.png" class="img-responsive" alt="Renderbit Technologies">
+			  </h4>
               <nav>
                 <ul class="nav masthead-nav">
                   <li><a href="#home-wrapper">Home</a></li>
@@ -105,7 +109,9 @@
         <div class="cover-container">
           <div class="masthead clearfix">
             <div class="inner">
-              <h4 class="masthead-brand">Renderbit Technologies</h4>
+              <h4 class="masthead-brand">
+			    <img src="img/renderbit-logo-white.png" class="img-responsive" alt="Renderbit Technologies">
+			  </h4>
               <nav>
                 <ul class="nav masthead-nav">
                   <li><a href="#home-wrapper">Home</a></li>
@@ -161,6 +167,12 @@
 
     <!-- jQuery -->
     <script src="js/jquery.min.js"></script>
+	<!-- -prefix-free -->
+    <script src="js/prefixfree.min.js"></script>
+    <script src="js/prefixfree.vars.js"></script>
+    <script src="js/prefixfree.viewport-units.js"></script>
+    <script src="js/prefixfree.dynamic-dom.min.js"></script>
+    <script src="js/prefixfree.jquery.js"></script>
 	<!-- Bootstrap core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
     <!-- Typed.js -->
