Add jQuery backstretch

--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
     <script src="js/prefixfree.jquery.js"></script>
 	<!-- Bootstrap core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+	<!-- jQuery backstretch -->
+    <script src="js/jquery.backstretch.min.js"></script>
     <!-- Typed.js -->
 	<script src="js/typed.min.js"></script>
 	<!-- Autogrow textareas -->
