Add loading spinner

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Renderbit Technologies">
     <link rel="icon" href="img/favicon.png">
-	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+	<link rel="apple-touch-icon" href="img/renderbit-logo-square.png">
 
     <title>Renderbit Technologies | Web Presence Provider, Responsive Web Development, Mobile Apps Development</title>
 
@@ -32,8 +32,11 @@
     <![endif]-->
   </head>
 
-  <body>
-
+  <body class="no-overflow">
+	<div class="loader">
+	  <div class="spinner"></div>
+	  <img src="img/renderbit-logo-square.png" class="spinner-logo" alt="Renderbit Technologies">
+	</div>
     <div class="site-wrapper">
       <div class="site-wrapper-inner" id="home-wrapper">
         <div class="cover-container">
