Preload slideshow images

--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
   </head>
 
   <body class="no-overflow">
+
 	<div class="loader">
+	  <div class="preload">
+	    <img src="img/slide-1.jpg" width="1" height="1">
+	    <img src="img/slide-2.jpg" width="1" height="1">
+	    <img src="img/slide-3.jpg" width="1" height="1">
+	    <img src="img/slide-4.jpg" width="1" height="1">
+	  </div>
 	  <div class="spinner"></div>
 	  <img src="img/renderbit-logo-square.png" class="spinner-logo" alt="Renderbit Technologies">
 	</div>
