--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 			  </div><!-- /.col-sm-6 -->
 			  <div class="col-sm-6">
 			    <p class="lead">Drop us a line for any queries or feedback. We'd love to hear from you!</p>
-				<form method="post" action="https://script.google.com/macros/s/AKfycbxB0eyiotT1_KRBimtYx_QyUmbfE7FINLkzLNBgl3NSlO8UjSM/exec">
+				<form id="contactForm" method="post" action="https://script.google.com/macros/s/AKfycbxB0eyiotT1_KRBimtYx_QyUmbfE7FINLkzLNBgl3NSlO8UjSM/exec">
 				  <div class="form-group float-label-control">
 					<label for="name">Your name</label>
 					<input type="text" class="form-control" id="name" name="name" placeholder="Your name">
@@ -185,8 +185,12 @@
     <script src="js/prefixfree.jquery.js"></script>
 	<!-- Bootstrap core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+	<!-- Bootstrap notify -->
+    <script src="js/bootstrap-notify.min.js"></script>
 	<!-- jQuery backstretch -->
     <script src="js/jquery.backstretch.min.js"></script>
+    <!-- jQuery form -->
+	<script src="js/jquery.form.min.js"></script>
     <!-- Typed.js -->
 	<script src="js/typed.min.js"></script>
 	<!-- Autogrow textareas -->
